--- a/adminpage/package.json
+++ b/adminpage/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.0.1",
     "@tailwindcss/vite": "^4.1.1",
     "react": "^19.0.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.1.1"
